added packages to project

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "david senack",
   "license": "MIT",
   "dependencies": {
+    "@truffle/hdwallet-provider": "^1.4.3",
+    "dotenv": "^10.0.0",
     "openzeppelin-solidity": "4.3.0"
   }
 }
