--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@truffle/hdwallet-provider": "^1.4.3",
     "dotenv": "^10.0.0",
+    "fs": "^0.0.1-security",
     "openzeppelin-solidity": "4.3.0"
   }
 }
